--- a/index.html
+++ b/index.html
@@ -1,40 +1,59 @@
-<!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Star Wars Characters </title>
-  <link rel="stylesheet" href="/style.css">
-  <link rel="shortcut icon" href="/assets/millennium-falcon.png" type="image/x-icon">
+  <title>Star Wars Characters</title>
+  <link rel="stylesheet" href="./style.css">
+  <link rel="icon" href="./assets/millennium-falcon.png">
 </head>
-
-<header>
-  <a href="/index.html">
-    <div class="logo">
-      <img src="/assets/star-wars-logo.png" alt="logo" class="logo-img" />
-      <span class="logo-text">Characters</span>
-    </div>
-  </a>
-
-  <div class="social-media">
-
-    <a href="https://www.instagram.com/yasminnemendes/" target="_blank">
-      <i class="fa-brands fa-instagram"></i>
-    </a>
-
-    <a href="https://github.com/yasminmendes487" target="_blank">
-      <i class="fa-brands fa-github"></i>
-    </a>
-    <a href="https://www.linkedin.com/in/yasmin-mendes-b58a64258/" target="_blank">
-      <i class="fa-brands fa-linkedin-in"></i>
-    </a>
-  </div>
-</header>
-
 <body>
-  <script src="https://kit.fontawesome.com/9d401df957.js" crossorigin="anonymous"></script>
-  <script src="/script.js"></script>
-</body>
+  <header>
+    <a href="./index.html">
+      <div class="logo">
+        <img class="logo-img" alt="logo" src="./assets/star-wars-logo.png"/>
+        <span class="logo-text">Characters</span>
+      </div>
+    </a>
 
+    <div class="social-media">
+      <a href="https://www.instagram.com/yasminnemendes/" target="_blank">
+        <i class="fa-brands fa-instagram"></i>
+      </a>
+    
+      <a href="https://github.com/yasminmendes487" target="_blank">
+        <i class="fa-brands fa-github"></i>
+      </a>
+      <a href="https://www.linkedin.com/in/yasmin-mendes-b58a64258/ target="_blank">
+        <i class="fa-brands fa-linkedin-in"></i>
+      </a>
+    </div>
+  </header>
+
+  <div class="main-container">
+
+    <h2>Conheca todos os personagens de Star Wars em um so lugar</h2>
+
+    <div class="main-content" id="main-content"></div>
+
+    <div class="modal" id="modal" onclick="hideModal()">
+      <div class="modal-content" id="modal-content"></div>
+    </div>
+
+    <div class="buttons">
+      <button id="back-button" disabled>Anterior</button>
+      <button id="next-button" disabled>Próxima</button>
+    </div>
+
+  </div>
+
+  <footer>
+    <p class="footer-logo">Star Wars Characters</p>
+    <p class="copyrigth">Desenvolvido por &copy; Yasmin Mendes</p>
+  </footer>
+
+
+  <script src="https://kit.fontawesome.com/a747b09475.js" crossorigin="anonymous"></script>
+  <script src="./script.js"></script>
+</body>
 </html>
