--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
 
     <div class="main-content" id="main-content"></div>
 
+    <div class="modal" id="modal" onclick ="hideModal()">
+      <div class="modal-content" id="modal-content"></div>
+    </div>
+
     <div class="modal" id="modal" onclick="hideModal()">
       <div class="modal-content" id="modal-content"></div>
     </div>
